--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -115,119 +115,119 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
-    "    cli_display --> cli_utils\n",
-    "    cli_display --> cli_pattern_scanner\n",
-    "    cli_display --> cli_helper_discovery\n",
     "    cli_display --> cli_cli_config\n",
-    "    cli_display --> cli_imports\n",
+    "    cli_display --> cli_utils\n",
     "    cli_display --> cli_factory_extraction\n",
-    "    cli_display --> cli_core_utils_discovery\n",
+    "    cli_display --> cli_pattern_scanner\n",
     "    cli_display --> cli_example_discovery\n",
-    "    cli_display --> cli_search\n",
+    "    cli_display --> cli_imports\n",
+    "    cli_display --> cli_core_utils_discovery\n",
     "    cli_display --> cli_test_code\n",
+    "    cli_display --> cli_helper_discovery\n",
+    "    cli_display --> cli_search\n",
+    "    cli_dynamic_examples --> cli_cli_config\n",
     "    cli_dynamic_examples --> cli_display\n",
     "    cli_dynamic_examples --> cli_utils\n",
-    "    cli_dynamic_examples --> cli_pattern_scanner\n",
-    "    cli_dynamic_examples --> cli_helper_discovery\n",
-    "    cli_dynamic_examples --> cli_cli_config\n",
     "    cli_dynamic_examples --> cli_factory_extraction\n",
-    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
+    "    cli_dynamic_examples --> cli_pattern_scanner\n",
     "    cli_dynamic_examples --> cli_example_discovery\n",
-    "    cli_dynamic_examples --> cli_search\n",
-    "    cli_dynamic_examples --> cli_test_code\n",
     "    cli_dynamic_examples --> cli_imports\n",
+    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
+    "    cli_dynamic_examples --> cli_test_code\n",
+    "    cli_dynamic_examples --> cli_helper_discovery\n",
+    "    cli_dynamic_examples --> cli_search\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_display\n",
-    "    cli_explorer --> cli_dynamic_examples\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_cli_config\n",
-    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_display\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_dynamic_examples\n",
     "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_utils\n",
-    "    cli_factory_extraction --> core_base\n",
     "    cli_factory_extraction --> cli_utils\n",
+    "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_imports --> cli_utils\n",
-    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_cli_config\n",
+    "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_factory_extraction\n",
     "    cli_pattern_scanner --> cli_cli_config\n",
     "    cli_pattern_scanner --> cli_example_discovery\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_utils\n",
-    "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_search --> cli_example_discovery\n",
     "    cli_test_code --> cli_cli_config\n",
+    "    cli_test_code --> cli_utils\n",
     "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_utils --> cli_cli_config\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> core_resources\n",
-    "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_borders\n",
-    "    core_testing --> utilities_effects\n",
-    "    core_testing --> utilities_backgrounds\n",
     "    core_testing --> utilities_typography\n",
-    "    core_testing --> utilities_accessibility\n",
+    "    core_testing --> utilities_backgrounds\n",
     "    core_testing --> utilities_transitions_and_animation\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_accessibility\n",
     "    core_testing --> core_base\n",
-    "    utilities_accessibility --> core_base\n",
-    "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> builders_scales\n",
+    "    utilities_accessibility --> core_testing\n",
+    "    utilities_accessibility --> core_base\n",
     "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> core_testing\n",
+    "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_borders --> core_base\n",
-    "    utilities_borders --> builders_scales\n",
-    "    utilities_borders --> builders_colors\n",
     "    utilities_borders --> core_testing\n",
+    "    utilities_borders --> builders_colors\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_effects --> core_base\n",
-    "    utilities_effects --> builders_scales\n",
-    "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> core_testing\n",
-    "    utilities_filters --> builders_colors\n",
+    "    utilities_effects --> builders_colors\n",
+    "    utilities_effects --> builders_scales\n",
     "    utilities_filters --> core_base\n",
-    "    utilities_filters --> builders_scales\n",
+    "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_testing\n",
+    "    utilities_filters --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
-    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
+    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_interactivity --> core_base\n",
-    "    utilities_interactivity --> builders_scales\n",
-    "    utilities_interactivity --> builders_colors\n",
     "    utilities_interactivity --> core_testing\n",
+    "    utilities_interactivity --> builders_colors\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_layout --> core_base\n",
-    "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_testing\n",
-    "    utilities_sizing --> core_base\n",
-    "    utilities_sizing --> core_testing\n",
+    "    utilities_layout --> builders_scales\n",
     "    utilities_sizing --> builders_scales\n",
+    "    utilities_sizing --> core_testing\n",
+    "    utilities_sizing --> core_base\n",
+    "    utilities_spacing --> core_testing\n",
     "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_spacing --> core_testing\n",
     "    utilities_svg --> core_base\n",
-    "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> core_testing\n",
+    "    utilities_svg --> builders_scales\n",
+    "    utilities_tables --> core_testing\n",
     "    utilities_tables --> core_base\n",
     "    utilities_tables --> builders_scales\n",
-    "    utilities_tables --> core_testing\n",
     "    utilities_transforms --> core_base\n",
-    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_testing\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> core_testing\n",
-    "    utilities_typography --> core_base\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
+    "    utilities_typography --> core_testing\n",
     "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> builders_colors\n",
-    "    utilities_typography --> core_testing\n",
+    "    utilities_typography --> core_base\n",
     "```\n",
     "\n",
     "*116 cross-module dependencies detected*"
@@ -794,132 +794,132 @@
     "    \n",
     "    def hover(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with hover state modifier applied\n",
     "        \"Apply hover modifier.\"\n",
     "    \n",
     "    def focus(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with focus state modifier applied\n",
     "        \"Apply focus modifier.\"\n",
     "    \n",
     "    def active(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with active state modifier applied\n",
     "        \"Apply active modifier.\"\n",
     "    \n",
     "    def visited(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with visited state modifier applied\n",
     "        \"Apply visited modifier.\"\n",
     "    \n",
     "    def disabled(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with disabled state modifier applied\n",
     "        \"Apply disabled modifier.\"\n",
     "    \n",
     "    def checked(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with checked state modifier applied\n",
     "        \"Apply checked modifier.\"\n",
     "    \n",
     "    def required(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with required state modifier applied\n",
     "        \"Apply required modifier.\"\n",
     "    \n",
     "    def invalid(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with invalid state modifier applied\n",
     "        \"Apply invalid modifier.\"\n",
     "    \n",
     "    def valid(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with valid state modifier applied\n",
     "        \"Apply valid modifier.\"\n",
     "    \n",
     "    def before(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with before pseudo-element modifier applied\n",
     "        \"Apply before pseudo-element modifier.\"\n",
     "    \n",
     "    def after(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with after pseudo-element modifier applied\n",
     "        \"Apply after pseudo-element modifier.\"\n",
     "    \n",
     "    def placeholder(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with placeholder modifier applied\n",
     "        \"Apply placeholder modifier.\"\n",
     "    \n",
     "    def selection(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with selection modifier applied\n",
     "        \"Apply selection modifier.\"\n",
     "    \n",
     "    def sm(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with small breakpoint modifier applied\n",
     "        \"Apply small breakpoint modifier.\"\n",
     "    \n",
     "    def max_sm(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with max-sm breakpoint modifier applied\n",
     "        \"Apply max small breakpoint modifier variant.\"\n",
     "    \n",
     "    def md(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with medium breakpoint modifier applied\n",
     "        \"Apply medium breakpoint modifier.\"\n",
     "    \n",
     "    def max_md(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with max-md breakpoint modifier applied\n",
     "        \"Apply max medium breakpoint modifier variant.\"\n",
     "    \n",
     "    def lg(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with large breakpoint modifier applied\n",
     "        \"Apply large breakpoint modifier.\"\n",
     "    \n",
     "    def xl(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with extra large breakpoint modifier applied\n",
     "        \"Apply extra large breakpoint modifier.\"\n",
     "    \n",
     "    def dark(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with dark mode modifier applied\n",
     "        \"Apply dark mode modifier.\"\n",
     "    \n",
     "    def motion_reduce(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with reduced motion modifier applied\n",
     "        \"Apply reduced motion modifier.\"\n",
     "    \n",
     "    def motion_safe(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with safe motion modifier applied\n",
     "        \"Apply safe motion modifier.\"\n",
     "    \n",
     "    def first(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with first child modifier applied\n",
     "        \"Apply first child modifier.\"\n",
     "    \n",
     "    def last(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with last child modifier applied\n",
     "        \"Apply last child modifier.\"\n",
     "    \n",
     "    def odd(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with odd child modifier applied\n",
     "        \"Apply odd child modifier.\"\n",
     "    \n",
     "    def even(\n",
     "            self\n",
-    "        ) -> 'BaseUtility':  # TODO: Add return description\n",
+    "        ) -> 'BaseUtility':  # Utility with even child modifier applied\n",
     "        \"Apply even child modifier.\"\n",
     "    \n",
     "    def group(\n",
@@ -1699,19 +1699,19 @@
     "\n",
     "```python\n",
     "def get_all_color_families(\n",
-    ") -> List[str]:  # TODO: Add return description\n",
+    ") -> List[str]:  # List of all color family names\n",
     "    \"Get list of all Tailwind color family names.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def get_all_shades(\n",
-    ") -> List[str]:  # TODO: Add return description\n",
+    ") -> List[str]:  # List of all shade values\n",
     "    \"Get list of all Tailwind shade values.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def get_all_color_specs(\n",
-    ") -> List[str]:  # TODO: Add return description\n",
+    ") -> List[str]:  # List of all valid color-shade combinations\n",
     "    \"Get list of all valid color-shade combinations.\"\n",
     "```\n",
     "\n",
