--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -115,43 +115,43 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
+    "    cli_display --> cli_example_discovery\n",
     "    cli_display --> cli_cli_config\n",
     "    cli_display --> cli_utils\n",
     "    cli_display --> cli_factory_extraction\n",
     "    cli_display --> cli_pattern_scanner\n",
-    "    cli_display --> cli_example_discovery\n",
-    "    cli_display --> cli_imports\n",
-    "    cli_display --> cli_core_utils_discovery\n",
-    "    cli_display --> cli_test_code\n",
-    "    cli_display --> cli_helper_discovery\n",
     "    cli_display --> cli_search\n",
-    "    cli_dynamic_examples --> cli_cli_config\n",
+    "    cli_display --> cli_helper_discovery\n",
+    "    cli_display --> cli_core_utils_discovery\n",
+    "    cli_display --> cli_imports\n",
+    "    cli_display --> cli_test_code\n",
     "    cli_dynamic_examples --> cli_display\n",
+    "    cli_dynamic_examples --> cli_example_discovery\n",
+    "    cli_dynamic_examples --> cli_cli_config\n",
     "    cli_dynamic_examples --> cli_utils\n",
     "    cli_dynamic_examples --> cli_factory_extraction\n",
     "    cli_dynamic_examples --> cli_pattern_scanner\n",
-    "    cli_dynamic_examples --> cli_example_discovery\n",
-    "    cli_dynamic_examples --> cli_imports\n",
-    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
-    "    cli_dynamic_examples --> cli_test_code\n",
-    "    cli_dynamic_examples --> cli_helper_discovery\n",
     "    cli_dynamic_examples --> cli_search\n",
+    "    cli_dynamic_examples --> cli_helper_discovery\n",
+    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
+    "    cli_dynamic_examples --> cli_imports\n",
+    "    cli_dynamic_examples --> cli_test_code\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_cli_config\n",
     "    cli_explorer --> cli_display\n",
+    "    cli_explorer --> cli_cli_config\n",
     "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_dynamic_examples\n",
     "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_utils\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_cli_config\n",
     "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_factory_extraction\n",
     "    cli_pattern_scanner --> cli_cli_config\n",
     "    cli_pattern_scanner --> cli_example_discovery\n",
@@ -159,75 +159,75 @@
     "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_example_discovery\n",
-    "    cli_test_code --> cli_cli_config\n",
-    "    cli_test_code --> cli_utils\n",
-    "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_cli_config\n",
+    "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_utils\n",
     "    cli_utils --> cli_cli_config\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_borders\n",
-    "    core_testing --> utilities_typography\n",
-    "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> core_resources\n",
     "    core_testing --> utilities_effects\n",
-    "    core_testing --> utilities_accessibility\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_borders\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_backgrounds\n",
     "    core_testing --> core_base\n",
-    "    utilities_accessibility --> builders_scales\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> utilities_accessibility\n",
+    "    core_testing --> core_resources\n",
     "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> core_base\n",
+    "    utilities_accessibility --> builders_scales\n",
+    "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> core_testing\n",
-    "    utilities_backgrounds --> builders_colors\n",
-    "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> core_base\n",
     "    utilities_borders --> core_testing\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_borders --> builders_scales\n",
-    "    utilities_effects --> core_base\n",
-    "    utilities_effects --> core_testing\n",
     "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> builders_scales\n",
-    "    utilities_filters --> core_base\n",
-    "    utilities_filters --> builders_colors\n",
-    "    utilities_filters --> core_testing\n",
+    "    utilities_effects --> core_base\n",
+    "    utilities_effects --> core_testing\n",
     "    utilities_filters --> builders_scales\n",
+    "    utilities_filters --> builders_colors\n",
+    "    utilities_filters --> core_base\n",
+    "    utilities_filters --> core_testing\n",
+    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
-    "    utilities_flexbox_and_grid --> builders_scales\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> core_testing\n",
     "    utilities_interactivity --> builders_colors\n",
-    "    utilities_interactivity --> builders_scales\n",
+    "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_base\n",
     "    utilities_layout --> core_testing\n",
-    "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_testing\n",
     "    utilities_sizing --> core_base\n",
+    "    utilities_sizing --> builders_scales\n",
+    "    utilities_spacing --> builders_scales\n",
     "    utilities_spacing --> core_testing\n",
     "    utilities_spacing --> core_base\n",
-    "    utilities_spacing --> builders_scales\n",
-    "    utilities_svg --> core_base\n",
-    "    utilities_svg --> builders_colors\n",
-    "    utilities_svg --> core_testing\n",
     "    utilities_svg --> builders_scales\n",
-    "    utilities_tables --> core_testing\n",
-    "    utilities_tables --> core_base\n",
+    "    utilities_svg --> builders_colors\n",
+    "    utilities_svg --> core_base\n",
+    "    utilities_svg --> core_testing\n",
     "    utilities_tables --> builders_scales\n",
+    "    utilities_tables --> core_base\n",
+    "    utilities_tables --> core_testing\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
     "    utilities_transforms --> core_testing\n",
-    "    utilities_transforms --> builders_scales\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> core_testing\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
-    "    utilities_typography --> core_testing\n",
     "    utilities_typography --> builders_scales\n",
-    "    utilities_typography --> builders_colors\n",
     "    utilities_typography --> core_base\n",
+    "    utilities_typography --> core_testing\n",
+    "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
     "*116 cross-module dependencies detected*"
@@ -1483,65 +1483,48 @@
     "#### Functions\n",
     "\n",
     "```python\n",
-    "def get_tailwind_config(\n",
-    ") -> LibraryConfig:  # TODO: Add return description\n",
+    "def get_tailwind_config() -> LibraryConfig: # Configuration for cjm-fasthtml-tailwind library\n",
     "    \"Get configuration for cjm-fasthtml-tailwind library.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def set_active_config(\n",
-    "    config: LibraryConfig  # TODO: Add description\n",
-    ") -> None:  # TODO: Add return description\n",
+    "    config:LibraryConfig # The library configuration to set as active\n",
+    "): # Returns None\n",
     "    \"Set the active library configuration.\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def get_active_config(\n",
-    ") -> LibraryConfig:  # TODO: Add return description\n",
-    "    \"\"\"\n",
-    "    Get the active library configuration.\n",
+    "def get_active_config() -> LibraryConfig: # The active library configuration (defaults to Tailwind)\n",
+    "    \"\"\"Get the active library configuration. If no configuration is set, returns the Tailwind config.\"\"\"\n",
+    "    global _active_config\n",
     "    \n",
-    "    If no configuration is set, returns the Tailwind config.\n",
-    "    \"\"\"\n",
+    "    if _active_config is not None\n",
+    "    \"Get the active library configuration. If no configuration is set, returns the Tailwind config.\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def reset_config(\n",
-    ") -> None:  # TODO: Add return description\n",
+    "def reset_config(): # Returns None\n",
     "    \"Reset the active configuration to force re-detection.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def get_config_by_name(\n",
-    "    name: str  # TODO: Add description\n",
-    ") -> Optional[LibraryConfig]:  # TODO: Add return description\n",
-    "    \"\"\"\n",
-    "    Get a library configuration by name.\n",
-    "    \n",
-    "    Args:\n",
-    "        name: Library name ('tailwind')\n",
-    "    \n",
-    "    Returns:\n",
-    "        LibraryConfig or None if not found\n",
-    "    \"\"\"\n",
+    "    name:str # Library name ('tailwind')\n",
+    ") -> Optional[LibraryConfig]: # LibraryConfig or None if not found\n",
+    "    \"Get a library configuration by name.\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def list_available_configs(\n",
-    ") -> List[str]:  # TODO: Add return description\n",
+    "def list_available_configs() -> List[str]: # List of available library configuration names\n",
     "    \"List all available library configurations.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def get_config_info(\n",
-    "    config: LibraryConfig  # TODO: Add description\n",
-    ") -> Dict[str, Any]:  # TODO: Add return description\n",
-    "    \"\"\"\n",
-    "    Get information about a configuration.\n",
-    "    \n",
-    "    Returns:\n",
-    "        Dictionary with configuration details\n",
-    "    \"\"\"\n",
+    "    config:LibraryConfig # The library configuration to get information about\n",
+    ") -> Dict[str, Any]: # Dictionary with configuration details\n",
+    "    \"Get information about a configuration.\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
@@ -1565,15 +1548,15 @@
     "    \n",
     "    def get_test_function_pattern(\n",
     "            self,\n",
-    "            module_name: str,  # TODO: Add description\n",
-    "            feature: str  # TODO: Add description\n",
-    "        ) -> str:  # TODO: Add return description\n",
+    "            module_name:str, # Name of the module (e.g., 'spacing', 'sizing')\n",
+    "            feature:str # Feature name (e.g., 'basic', 'directional')\n",
+    "        ) -> str: # Test function name pattern (e.g., 'test_spacing_basic_examples')\n",
     "        \"Get the expected test function name for a module and feature.\"\n",
     "    \n",
     "    def get_helper_test_function(\n",
     "            self,\n",
-    "            module_name: str  # TODO: Add description\n",
-    "        ) -> str:  # TODO: Add return description\n",
+    "            module_name:str # Name of the module (e.g., 'spacing', 'sizing')\n",
+    "        ) -> str: # Helper test function name (e.g., 'test_spacing_helper_examples')\n",
     "        \"Get the expected helper test function name for a module.\"\n",
     "```\n",
     "\n",
@@ -1823,8 +1806,8 @@
     "\n",
     "```python\n",
     "def get_core_utilities(\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
-    ") -> List[CoreUtilityInfo]:  # TODO: Add return description\n",
+    "    config:Optional[LibraryConfig]=None # Library configuration (uses active config if not provided)\n",
+    ") -> List[CoreUtilityInfo]: # List of core utility information objects\n",
     "    \"Get information about core utility functions.\"\n",
     "```\n",
     "\n",
@@ -1921,23 +1904,23 @@
     "\n",
     "```python\n",
     "def display_modules(\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    "    config:Optional[LibraryConfig]=None # Library configuration (uses active config if not provided)\n",
+    "): # Returns None\n",
     "    \"Display all available utility modules with their documentation.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_module_factories(\n",
-    "    module_name: str,  # TODO: Add description\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    "    module_name:str, # Name of the module to display factories for\n",
+    "    config:Optional[LibraryConfig]=None # Library configuration (uses active config if not provided)\n",
+    "): # Returns None\n",
     "    \"Display all factories in a specific module.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_all_factories(\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    "    config:Optional[LibraryConfig]=None # Library configuration (uses active config if not provided)\n",
+    "): # Returns None\n",
     "    \"Display all factories across all modules.\"\n",
     "```\n",
     "\n",
