--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -115,117 +115,117 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
-    "    cli_display --> cli_example_discovery\n",
+    "    cli_display --> cli_pattern_scanner\n",
     "    cli_display --> cli_cli_config\n",
     "    cli_display --> cli_utils\n",
-    "    cli_display --> cli_factory_extraction\n",
-    "    cli_display --> cli_pattern_scanner\n",
+    "    cli_display --> cli_example_discovery\n",
     "    cli_display --> cli_search\n",
-    "    cli_display --> cli_helper_discovery\n",
-    "    cli_display --> cli_core_utils_discovery\n",
-    "    cli_display --> cli_imports\n",
     "    cli_display --> cli_test_code\n",
+    "    cli_display --> cli_factory_extraction\n",
+    "    cli_display --> cli_core_utils_discovery\n",
+    "    cli_display --> cli_helper_discovery\n",
+    "    cli_display --> cli_imports\n",
     "    cli_dynamic_examples --> cli_display\n",
-    "    cli_dynamic_examples --> cli_example_discovery\n",
+    "    cli_dynamic_examples --> cli_pattern_scanner\n",
     "    cli_dynamic_examples --> cli_cli_config\n",
     "    cli_dynamic_examples --> cli_utils\n",
-    "    cli_dynamic_examples --> cli_factory_extraction\n",
-    "    cli_dynamic_examples --> cli_pattern_scanner\n",
+    "    cli_dynamic_examples --> cli_example_discovery\n",
     "    cli_dynamic_examples --> cli_search\n",
-    "    cli_dynamic_examples --> cli_helper_discovery\n",
-    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
-    "    cli_dynamic_examples --> cli_imports\n",
     "    cli_dynamic_examples --> cli_test_code\n",
+    "    cli_dynamic_examples --> cli_factory_extraction\n",
+    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
+    "    cli_dynamic_examples --> cli_helper_discovery\n",
+    "    cli_dynamic_examples --> cli_imports\n",
     "    cli_example_discovery --> cli_utils\n",
+    "    cli_explorer --> cli_dynamic_examples\n",
     "    cli_explorer --> cli_display\n",
     "    cli_explorer --> cli_cli_config\n",
     "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_dynamic_examples\n",
-    "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_utils\n",
-    "    cli_factory_extraction --> cli_utils\n",
+    "    cli_explorer --> cli_test_code\n",
     "    cli_factory_extraction --> core_base\n",
-    "    cli_helper_discovery --> cli_utils\n",
+    "    cli_factory_extraction --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
+    "    cli_helper_discovery --> cli_utils\n",
     "    cli_imports --> cli_helper_discovery\n",
-    "    cli_imports --> cli_cli_config\n",
-    "    cli_imports --> cli_utils\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_imports --> cli_factory_extraction\n",
-    "    cli_pattern_scanner --> cli_cli_config\n",
+    "    cli_imports --> cli_cli_config\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_utils\n",
     "    cli_pattern_scanner --> cli_example_discovery\n",
-    "    cli_search --> cli_utils\n",
+    "    cli_pattern_scanner --> cli_cli_config\n",
     "    cli_search --> cli_helper_discovery\n",
-    "    cli_search --> cli_factory_extraction\n",
+    "    cli_search --> cli_utils\n",
     "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_factory_extraction\n",
     "    cli_test_code --> cli_helper_discovery\n",
-    "    cli_test_code --> cli_cli_config\n",
     "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_cli_config\n",
     "    cli_test_code --> cli_utils\n",
     "    cli_utils --> cli_cli_config\n",
     "    core_testing --> utilities_effects\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_layout\n",
     "    core_testing --> utilities_borders\n",
+    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> core_base\n",
     "    core_testing --> utilities_typography\n",
     "    core_testing --> utilities_accessibility\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> core_resources\n",
-    "    utilities_accessibility --> core_testing\n",
+    "    core_testing --> core_base\n",
     "    utilities_accessibility --> core_base\n",
+    "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> builders_scales\n",
-    "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> core_base\n",
+    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_backgrounds --> core_testing\n",
-    "    utilities_borders --> builders_scales\n",
+    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_borders --> core_base\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> core_testing\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_effects --> builders_colors\n",
-    "    utilities_effects --> builders_scales\n",
     "    utilities_effects --> core_base\n",
+    "    utilities_effects --> builders_scales\n",
     "    utilities_effects --> core_testing\n",
-    "    utilities_filters --> builders_scales\n",
-    "    utilities_filters --> builders_colors\n",
+    "    utilities_effects --> builders_colors\n",
     "    utilities_filters --> core_base\n",
+    "    utilities_filters --> builders_colors\n",
+    "    utilities_filters --> builders_scales\n",
     "    utilities_filters --> core_testing\n",
-    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
+    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
-    "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> core_base\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> core_testing\n",
     "    utilities_interactivity --> builders_colors\n",
-    "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_base\n",
+    "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_testing\n",
-    "    utilities_sizing --> core_testing\n",
-    "    utilities_sizing --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
+    "    utilities_sizing --> core_base\n",
+    "    utilities_sizing --> core_testing\n",
+    "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
     "    utilities_spacing --> core_testing\n",
-    "    utilities_spacing --> core_base\n",
-    "    utilities_svg --> builders_scales\n",
-    "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> core_base\n",
+    "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> core_testing\n",
-    "    utilities_tables --> builders_scales\n",
+    "    utilities_svg --> builders_colors\n",
     "    utilities_tables --> core_base\n",
+    "    utilities_tables --> builders_scales\n",
     "    utilities_tables --> core_testing\n",
-    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_testing\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_testing\n",
-    "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> core_base\n",
+    "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> core_testing\n",
     "    utilities_typography --> builders_colors\n",
     "```\n",
@@ -1926,101 +1926,101 @@
     "\n",
     "```python\n",
     "def display_module_examples(\n",
-    "    module_name: str,  # TODO: Add description\n",
+    "    module_name: str,  # Name of the module to display examples for\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display all usage examples in a specific module.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_all_examples(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display all usage examples across all modules.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_example_source(\n",
-    "    module_name: str,  # TODO: Add description\n",
-    "    feature: str,  # TODO: Add description\n",
+    "    module_name: str,  # Name of the module containing the example\n",
+    "    feature: str,  # Feature name identifying the example\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display the source code of a specific example function.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_module_helpers(\n",
-    "    module_name: str,  # TODO: Add description\n",
+    "    module_name: str,  # Name of the module to display helpers for\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display helper functions available in a specific module.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_helper_source(\n",
-    "    module_name: str,  # TODO: Add description\n",
-    "    helper_name: str,  # TODO: Add description\n",
+    "    module_name: str,  # Name of the module containing the helper\n",
+    "    helper_name: str,  # Name of the helper function\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display the source code of a specific helper function.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_all_helpers(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display all helper functions across all modules.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_factory_info(\n",
-    "    module_name: str,  # TODO: Add description\n",
-    "    factory_name: str,  # TODO: Add description\n",
+    "    module_name: str,  # Name of the module containing the factory\n",
+    "    factory_name: str,  # Name of the factory to display info for\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display detailed information about a specific factory.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_search_results(\n",
-    "    results: List[SearchResult],  # TODO: Add description\n",
-    "    query: str,  # TODO: Add description\n",
+    "    results: List[SearchResult],  # List of search results to display\n",
+    "    query: str,  # The search query that was executed\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display search results in a formatted way.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_core_utility_source(\n",
-    "    util_name: str,  # TODO: Add description\n",
+    "    util_name: str,  # Name of the core utility function\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display the source code of a specific core utility function.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_core_utilities(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display all core utility functions.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_imports(\n",
-    "    modules: Optional[List[str]] = None,  # TODO: Add description\n",
+    "    modules: Optional[List[str]] = None,  # List of specific modules to get imports for (None for all)\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display recommended import statements.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_test_code_result(\n",
-    "    success: bool,  # TODO: Add description\n",
-    "    stdout: str,  # TODO: Add description\n",
-    "    stderr: str,  # TODO: Add description\n",
-    "    code: str,  # TODO: Add description\n",
+    "    success: bool,  # Whether the code executed successfully\n",
+    "    stdout: str,  # Standard output from the code execution\n",
+    "    stderr: str,  # Standard error from the code execution\n",
+    "    code: str,  # The code that was executed\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Display the results of test code execution.\"\n",
     "```\n"
    ]
@@ -2050,57 +2050,57 @@
     "\n",
     "```python\n",
     "def get_example_modules(\n",
-    "    limit: int = 2,  # TODO: Add description\n",
+    "    limit: int = 2,  # Maximum number of module names to return\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
+    ") -> str:  # Comma-separated list of module names\n",
     "    \"Get example module names dynamically.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def get_example_factories(\n",
-    "    module_name: str = None,  # TODO: Add description\n",
-    "    limit: int = 4,  # TODO: Add description\n",
+    "    module_name: str = None,  # Optional module name to get factories from (uses first module if None)\n",
+    "    limit: int = 4,  # Maximum number of factory names to return\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
+    ") -> str:  # Comma-separated list of factory names\n",
     "    \"Get example factory names dynamically.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def get_example_features(\n",
-    "    module_name: str = None,  # TODO: Add description\n",
-    "    limit: int = 3,  # TODO: Add description\n",
+    "    module_name: str = None,  # Optional module name to get features from (uses first module if None)\n",
+    "    limit: int = 3,  # Maximum number of feature names to return\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
+    ") -> str:  # Comma-separated list of feature names\n",
     "    \"Get example feature names dynamically.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def get_example_helpers(\n",
-    "    module_name: str = None,  # TODO: Add description\n",
-    "    limit: int = 2,  # TODO: Add description\n",
+    "    module_name: str = None,  # Optional module name to get helpers from (uses first module if None)\n",
+    "    limit: int = 2,  # Maximum number of helper names to return\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
+    ") -> str:  # Comma-separated list of helper function names\n",
     "    \"Get example helper function names dynamically.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def get_example_core_utils(\n",
-    "    limit: int = 2,  # TODO: Add description\n",
+    "    limit: int = 2,  # Maximum number of utility names to return\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
+    ") -> str:  # Comma-separated list of core utility names\n",
     "    \"Get example core utility names dynamically.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def get_combine_classes_example(\n",
-    ") -> str:  # TODO: Add return description\n",
+    ") -> str:  # Example code string using combine_classes\n",
     "    \"Get a dynamic example of combine_classes usage.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def get_example_test_code(\n",
-    "    limit_chars: int = 50  # TODO: Add description\n",
-    ") -> str:  # TODO: Add return description\n",
+    "    limit_chars: int = 50  # Maximum length of the returned code example\n",
+    ") -> str:  # Example code string extracted from test functions\n",
     "    \"Get an actual code example from test functions.\"\n",
     "```\n"
    ]
